--- a/trabalho-webII/pom.xml
+++ b/trabalho-webII/pom.xml
@@ -24,6 +24,7 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.28</version>
+      <scope>runtime</scope>
     </dependency>
 
 
